--- a/public/stylesheets/index/index.scss
+++ b/public/stylesheets/index/index.scss
@@ -14,6 +14,11 @@ $transition-duration: 280ms;
     padding: 0;
     box-sizing: border-box;
 
+    #3m{
+        position: relative !important;
+        color: red !important;
+    }
+
     .span-value{
         background: #D1D1D1 !important;
         padding: 8px 16px !important;
@@ -1326,5 +1331,4 @@ footer{
             }
         }
     }
-
 }
