some bug corrections

--- a/public/stylesheets/index/index.css
+++ b/public/stylesheets/index/index.css
@@ -6,6 +6,11 @@
           box-sizing: border-box;
 }
 
+* #3m {
+  position: relative !important;
+  color: red !important;
+}
+
 * .span-value {
   background: #D1D1D1 !important;
   padding: 8px 16px !important;
