--- a/src/views/index.html
+++ b/src/views/index.html
@@ -254,7 +254,6 @@
                                 <h3 class="content-title">Only one template can be created, you can insert a brand for
                                     customization.
                                 </h3>
-                                <!-- <h4 class="content-p">If you want more than 10 Zabbix, <strong>contact us</strong></h4> -->
                             </div>
 
                             <div class="reseller-attributes">
@@ -308,15 +307,7 @@
                             <h2>Choose the best plan for you</h2>
                         </div>
                         <div class="paragraph-container">
-                            <p>Click the button below and
-                                follow the steps to start
-                                making your <strong>reports</strong>.</p>
-                        </div>
-                        <div class="button-container">
-                            <!-- LINK DO PAY PAL AQUI -->
-                            <a id="pay-pal-btn" href="LINK DO PAY PAL AQUI">
-                                <img src="/images/icons/paypal.svg" alt="paypal logo">
-                            </a>
+                            <p>Select the setting you like, then click the button below it</p>
                         </div>
                     </div>
                 </div>
@@ -328,10 +319,8 @@
                     <h2>Learn how to generate your first report</h2>
                 </div>
                 <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/8HlPCyQRiek" frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                    <a target="_blank" href="https://www.youtube.com/channel/UCVaLF_9xtCOeVnCJZJ1MTEA">Watch more
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Va3jyS611Hk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <a target="_blank" href="https://www.youtube.com/channel/UCVaLF_9xtCOeVnCJZJ1MTEA/playlists">Watch more
                         videos</a>
                 </div>
             </article>
