--- a/public/stylesheets/index/resp_945.css
+++ b/public/stylesheets/index/resp_945.css
@@ -80,9 +80,9 @@
   }
   section.prices article.prices div.content-container {
     -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
     margin-top: 0;
   }
   section.prices article.prices div.content-container div.small {
@@ -127,6 +127,7 @@
     padding-bottom: 32px;
   }
   section.prices article.prices div.content-container div.big div.price-card {
+    min-height: 510px !important;
     margin-bottom: 0 !important;
     opacity: 1 !important;
   }
