add all external links

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -69,7 +69,7 @@
                         <li><a href="#prices" class="nav-link">Prices</a></li>
                         <li><a href="#video" class="nav-link">Videos</a></li>
                         <li><a href="#contact" class="nav-link">Contact</a></li>
-                        <li><a href="#">Start Now</a></li>
+                        <li><a target="_blank" href="http://report.zabbix.report/">Start Now</a></li>
                     </ul>
                 </nav>
 
@@ -84,7 +84,7 @@
                         <li><a href="#prices" class="nav-link">Prices</a></li>
                         <li><a href="#video" class="nav-link">Videos</a></li>
                         <li><a href="#contact" class="nav-link">Contact</a></li>
-                        <li><a href="#">Start Now</a></li>
+                        <li><a href="http://report.zabbix.report/">Start Now</a></li>
                     </ul>
                 </nav>
             </header>
@@ -338,7 +338,7 @@
                     <span>Login: demo</span>
                     <span>Password: demo</span>
                     <div class="link-container">
-                        <a href="#" class="try-it-btn">Try it now</a>
+                        <a target="_blank" href="http://report.zabbix.report/" class="try-it-btn">Try it now</a>
                     </div>
                 </div>
             </div>
