allow only positive number on the inputs

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -168,7 +168,7 @@
                             </div>
                             <div class="counter-container">
                                 <span>Reports</span>
-                                <input value="1" type="number" id="alone-input">
+                                <input value="1" min="1" type="number" id="alone-input">
                             </div>
                             <div class="total-price-container" id="mt">
                                 <span>Total:</span>
@@ -190,7 +190,7 @@
                             </div>
                             <div class="counter-container">
                                 <span>Zabbix</span>
-                                <input value="1" type="number" id="zabbix-selector">
+                                <input value="1" min="1" type="number" id="zabbix-selector">
                             </div>
                             <div class="multiple-counter-container">
                                 <div class="counter __left" id="mods">
